# python-elasticsearch

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/core/: config.py  elasticsearch.py
app/models/: document.py
app/routers/: documents.py  health.py
app/services/: document_service.py
docs/learning/: README.md
docs/learning/elasticsearch/: README.md
docs/learning/elasticsearch-dsl-fastapi/: README.md
docs/learning/elasticsearch-dsl-fastapi/01-foundations-setup/: 01_ecosystem-overview.md  02_installation-configuration.md  03_async-patterns.md  04_development-environment.md
docs/learning/elasticsearch-dsl-fastapi/02-elasticsearch-dsl-integration/: 01_document-models-mapping.md  02_async-document-operations.md  03_index-management.md  04_migration-strategies.md
docs/learning/elasticsearch-dsl-fastapi/03-fastapi-integration/: 01_query-builder-patterns.md  02_api-endpoint-design.md  03_pydantic-integration.md  04_dependency-injection.md
docs/learning/elasticsearch-dsl-fastapi/04-advanced-search/: 01_complex-queries.md  02_async-search-performance.md  03_aggregations-faceting.md  04_geospatial-vector-search.md
docs/learning/elasticsearch-dsl-fastapi/05-data-modeling/: 01_pydantic-validation.md  02_document-relationships.md  03_schema-design.md  04_serialization-patterns.md
docs/learning/elasticsearch-dsl-fastapi/06-production-patterns/: 01_monitoring-logging.md  (+3 more)
docs/learning/kibana/: README.md
docs/prompts/: create_elasticsearch_documentation.md  create_elasticsearch_dsl_fastapi_documentation.md  create_kibana_documentation.md
tests/: test_documents.py  test_main.py
(+56 files in other folders)
